# lol-miner

./: Cargo.toml  README.md
src/: api_client.rs  binary_search.rs  main.rs
src/lolStructs/: mod.rs
src/miner/: api_client.rs  binary_search.rs  mod.rs
