[package]
name = "lol-project"
version = "0.1.0"
authors = ["Leonardo Rodrigues <leonardojrr1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
